# crypto-flow-bot-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: branch-next-step.md  branch-status.md  ci-note.md  config-defaults.md  deployment-smoke.md  deployment.md  docker-consistency.md  final-smoke-note.md  logging-position-state.md  no-real-trading.md  offline-replay.md  open-pr.md  pr-created.md  pr-next-step.md  pr-open-instructions.md  pr-summary.md  pr8-calibration.md  pr8-validation.md  production-readiness-audit.md  ready-for-review.md  release-checklist.md  review-status.md  review.md  runtime-error-policy.md  test-double-notes.md
tests/: test_backtest.py  test_binance_client.py  test_calibration.py  test_candidate_engine.py  test_candidate_engine_result_trace.py  test_config.py  test_config_candidate_engine.py  test_entry_momentum_window.py  test_env_example.py  test_live_cycle_decision_summary.py  test_live_runner.py  test_live_runner_diagnostics.py  test_live_runner_governor.py  test_live_runner_no_trade_diagnostics.py  test_live_runner_no_trade_notifications.py  test_live_runner_telegram_preflight.py  test_live_symbol_decision_trace.py  test_logging.py  test_main.py  test_models.py  test_persistence.py  test_position_manager.py  test_regime_lite.py  test_rfa_engine.py  test_signal_governor.py  test_signal_governor_decision_trace.py  test_snapshot_builder.py  test_telegram.py  test_telegram_score_breakdown.py  test_telegram_send_trace.py  test_telegram_start.py
(+27 files in other folders)
