[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "crypto-flow-bot-v2"
version = "0.1.0"
description = "Telegram-only Binance Futures signal bot scaffold using the RFA Engine architecture."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hubievs13-web" }]
dependencies = [
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
crypto-flow-bot-v2 = "crypto_flow_bot_v2.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crypto_flow_bot_v2"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/crypto_flow_bot_v2/candidate_engine.py" = ["E501"]
